--- a/style.css
+++ b/style.css
@@ -1,3 +1,73 @@
-h1, p {
-  font-family: Lato;
+*,*:before,*:after{
+  box-siziing:border-box;
+}
+html{
+  font-size:100%;
+}
+body{
+  margin:0;
+  padding:0;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color:#fff;
+  display:flex;
+  justify-content:center;
+  align-content: center;
+  align-items:center;
+ 
+  height:100vh;
+}
+Form{
+  width:330px;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-content: center;
+  padding:30px 30px;
+  background-color:#f5f5f5;
+  border-radius:10px;
+  box-shadow:5px 10px 30px rgba(111, 0, 255,0.5);
+
+  
+}
+label{
+  font-size:16px;
+  padding-bottom:10px;
+}
+input{
+  border:0px solid transparent;
+  padding:10px;
+  background-color:#fff;
+  display:flex;
+  margin-bottom:30px;
+  border-radius:3px;
+  width:300px;
+}
+:outline{
+  border:0px solid transparent;
+}
+button{
+  padding:15px 36px;
+  border:0px solid transparent;
+  color:#fff;
+  display:inline-flex;
+  width:180px;
+  max-width:180px;
+  justify-content:center;
+  border-radius:50px;
+  font-size:16px;
+  background-color:rgb(111, 0, 255);
+ cursor:pointer;
+}
+h4{
+  margin:0;
+}
+.details {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 20px;
+    background-color: blue;
+    margin-bottom: 10px;
+    color: #fff;
+    border-radius:10px;
+    margin-top:10px;
 }
