--- a/style.css
+++ b/style.css
@@ -62,12 +62,12 @@ h4{
   margin:0;
 }
 .details {
-    display: flex;
+  display: flex;
     justify-content: space-between;
-    padding: 0px 20px;
-    background-color: blue;
+    padding: 10px 20px;
+    background-color: rgb(111, 0, 255);
     margin-bottom: 10px;
     color: #fff;
-    border-radius:10px;
-    margin-top:10px;
+    border-radius: 10px;
+    margin-top: 10px;
 }
