--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *,*:before,*:after{
-  box-siziing:border-box;
+  box-sizing:border-box;
 }
 html{
   font-size:100%;
@@ -40,17 +40,17 @@ input{
   display:flex;
   margin-bottom:30px;
   border-radius:3px;
-  width:300px;
+  
 }
 :outline{
   border:0px solid transparent;
 }
 button{
-  padding:15px 36px;
+  padding:12px 30px;
   border:0px solid transparent;
   color:#fff;
   display:inline-flex;
-  width:180px;
+  width:150px;
   max-width:180px;
   justify-content:center;
   border-radius:50px;
